Make Load cover entire screen to avoid white spaces

--- a/src/components/Load/Load.module.css
+++ b/src/components/Load/Load.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   padding-top: 10rem;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgb(0, 6, 26);
   position: absolute;
   z-index: 3;
